8151442: jstack doesn't close quotation marks properly with threads' name greater than 1996 characters

Reviewed-by: dsamersoff, kevinw